--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1",
     "postcss": "^8.4.28",
