--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "bootstrap-icons": "^1.10.5",
     "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1",
+    "formik": "^2.4.5",
     "postcss": "^8.4.28",
     "postcss-import": "^15.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
