--- a/package.json
+++ b/package.json
@@ -10,30 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1",
     "formik": "^2.4.5",
-    "postcss": "^8.4.28",
     "postcss-import": "^15.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
-    "tailwindcss": "^3.3.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.30",
     "vite": "^4.4.5"
   }
 }
